# aqua_tally_backend

./: .gitignore  README.md  TODO.md  manage.py  pyproject.toml
aqua_tally_api/: apps.py  urls.py
aqua_tally_api/migrations/: 0001_initial.py  0002_alter_goalmodel_user.py  0003_goalmodel_id_alter_goalmodel_date.py  0004_alter_goalmodel_user.py  0005_alter_goalmodel_date.py  0006_remove_goalmodel_goal_usermodel_goal.py
aqua_tally_api/models/: __init__.py  goal_model.py  user_model.py
aqua_tally_api/serializers/: __init__.py  goal_serializer.py  user_serializer.py
aqua_tally_api/services/: __init__.py  calculate_goal_service.py  construct_goal_response.py
aqua_tally_api/services/goal_services/: create_goal_service.py
aqua_tally_api/validations/: __init__.py  date_validation.py  goal_achieved_verifier.py
aqua_tally_api/views/: __init__.py
aqua_tally_api/views/goal_views/: __init__.py  goal_detail_view.py  goal_list_view.py  goal_today_view.py
aqua_tally_api/views/goal_views/date/: __init__.py  goal_date_view.py
aqua_tally_api/views/goal_views/today/: __init__.py  goal_today_view.py
aqua_tally_api/views/user_views/: __init__.py  user_detail_view.py  user_list_view.py
aqua_tally_backend/: asgi.py  settings.py  urls.py  wsgi.py
user/: models.py  urls.py  user_controller.py
user/migrations/: 0001_initial.py  0002_alter_usermodel_table.py
